--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     <title>Meals-Prepped-NOLA</title>
   </head>
   <body>
-    <noscript> HELLO WORLD! You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      HELLO WORLD! You need to enable JavaScript to run this app.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
